CHANGE: avoid content jumping by adding fixed height inline

--- a/src/components/hero3/hero3.module.css
+++ b/src/components/hero3/hero3.module.css
@@ -59,6 +59,12 @@
   }
 }
 
+@media all and (max-width: 1919px) {
+  .hero {
+    height: auto !important;
+  }
+}
+
 @media all and (min-width: 1920px) {
   .hero {
     height: 880px;
